--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,12 +2,13 @@ name: hello world
 
 on:
   push:
-    branches: 'main'
+    branches: main
   pull_request:
-    branches: 'main'
+    branches: main
 
   jobs:
-      runs-on: 'macOs'
+    
+      runs-on: macOs
       steps:
         - uses: actions/checkout@v2
         - name: hello world step1
