runs-on os changes

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@ on:
     branches: main
 
 jobs:
-  runs-on: macOs
+  runs-on: macos-13
   steps:
     - uses: actions/checkout@v2
     - name: hello world step1
