--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -10,17 +10,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    # - name: Use Node.js ${{ matrix.node-version }}
+    #   uses: actions/setup-node@v3
 
     - name: Build
       run: |
         npm install
         npm run build
+
+    - name: Test
+      run: |
+        npm run test
