--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,9 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: hello world step1
-      
+
       - run: echo Hi
