--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,15 +1,15 @@
 name: hello world
-
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-
+    branches:
+      - main
 jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: hello world step1
-
       - run: echo Hi
