--- a/package.json
+++ b/package.json
@@ -1,106 +1,46 @@
 {
-  "name": "portal-ui",
-  "version": "0.19.1",
+  "name": "react-demo",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/core": "^1.3.13",
-    "@date-io/date-fns": "^1.3.13",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@hookform/resolvers": "^3.0.0",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.122",
-    "@mui/material": "^5.11.12",
-    "@mui/x-date-pickers": "^6.0.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/uuid": "^9.0.0",
-    "axios": "^0.21.4",
-    "date-fns": "^2.29.3",
-    "file-saver": "^2.0.5",
-    "final-form": "^4.20.9",
-    "formik": "^2.2.9",
-    "iframe-resizer-react": "^1.1.0",
-    "lodash.debounce": "^4.0.8",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
-    "prop-types": "^15.7.2",
-    "qrcode.react": "^1.0.1",
-    "ra-data-json-server": "^3.15.2",
-    "react": "^17.0.0",
-    "react-admin": "4.8.1",
-    "react-bottom-scroll-listener": "^5.0.0",
-    "react-cookie": "^4.1.1",
-    "react-csv-reader": "3.4.0",
-    "react-dom": "^17.0.0",
-    "react-final-form": "^6.5.9",
-    "react-icons": "^4.3.1",
-    "react-lodash": "^0.1.2",
-    "react-moment": "^1.1.1",
-    "react-qrcode-logo": "^2.8.0",
-    "react-scripts": "4.0.3",
-    "react-window": "^1.8.6",
-    "reinspect": "^1.1.0",
-    "swagger-ui-react": "^4.1.0",
-    "typescript": "^4.7.4",
-    "uuid": "^9.0.0",
-    "web-vitals": "^1.0.1"
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "publish-dev": "aws s3 sync --size-only --delete build/ s3://portalrewrite/ --acl public-read --cache-control max-age=86400000,public && aws s3 cp build/index.html s3://portalrewrite/ --metadata-directive REPLACE --acl public-read --cache-control max-age=0,must-revalidate,public --content-type 'text/html; charset=utf-8' && aws cloudfront create-invalidation --distribution-id E7SRM7MJIQ5U5 --paths '/*'",
-    "publish-beta": "aws s3 sync --size-only --delete s3://portalrewrite/ s3://fd-prod-portal/ --acl public-read --exclude 'config.json' && aws s3 cp s3://portalrewrite/index.html s3://fd-prod-portal/ && aws cloudfront create-invalidation --distribution-id E3CDR9N5RRWKH --paths '/*'",
-    "publish-prod": "aws s3 sync --size-only --delete s3://portalrewrite/ s3://fd-prod-portal-com/ --acl public-read --exclude 'config.json' && aws s3 cp s3://portalrewrite/index.html s3://fd-prod-portal-com/ && aws cloudfront create-invalidation --distribution-id E2IU4G4IBJUU2Y --paths '/*'",
-    "publish-dev-beta": "aws s3 sync --size-only --delete build/ s3://fd-dev-beta-portal/ --acl public-read --cache-control max-age=86400000,public && aws s3 cp build/index.html s3://fd-dev-beta-portal/ --metadata-directive REPLACE --acl public-read --cache-control max-age=0,must-revalidate,public --content-type 'text/html; charset=utf-8' && aws cloudfront create-invalidation --distribution-id E30XQLH2EMRJ4W --paths '/*'"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
     ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@sambego/storybook-state": "^2.0.1",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/node-logger": "^6.5.9",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.5.9",
-    "@types/file-saver": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/lodash": "^4.14.170",
-    "@types/lodash.debounce": "^4.0.6",
-    "@types/node": "^15.12.1",
-    "@types/qrcode.react": "^1.0.2",
-    "@types/query-string": "^6.3.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-window": "^1.8.3",
-    "@types/swagger-ui-react": "^3.35.3",
-    "file-loader": "^6.2.0",
-    "storybook-react-context": "^0.6.0"
+    "react-router-dom": "^6.8.1"
   }
 }
