--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.0.0",
+
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
