--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
 
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
