--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@mui/material": "^5.11.12",
     "@mui/x-date-pickers": "^6.0.1",
 
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/uuid": "^9.0.0",
+    "axios": "^0.21.4",
+
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
