--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@types/uuid": "^9.0.0",
     "axios": "^0.21.4",
 
-    "connected-react-router": "^6.9.3",
+    "date-fns": "^2.29.3",
+    "file-saver": "^2.0.5",
+    "final-form": "^4.20.9",
+    "formik": "^2.2.9",
     
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
