--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "file-saver": "^2.0.5",
     "final-form": "^4.20.9",
     "formik": "^2.2.9",
-    
+
+    "iframe-resizer-react": "^1.1.0",
+    "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
+
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
