--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
 
+    "mui-rff": "^6.1.4",
+
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
