--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
 
     "mui-rff": "^6.1.4",
 
+    "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.1",
+    "ra-data-json-server": "^3.15.2",
+
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
