--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
 
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.15.2",
-
     "react": "^18.2.0",
+    "react-admin": "4.8.1",
+    "react-bottom-scroll-listener": "^5.0.0",
+    "react-cookie": "^4.1.1",
+    "react-csv-reader": "3.4.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.9",
+    
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
