--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "react-bottom-scroll-listener": "^5.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+
+    "react-final-form": "^6.5.9",
+    "react-icons": "^4.3.1",
+    "react-lodash": "^0.1.2",
+    "react-moment": "^1.1.1",
+    "react-qrcode-logo": "^2.8.0",
     
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
