--- a/package.json
+++ b/package.json
@@ -44,9 +44,14 @@
     "react-lodash": "^0.1.2",
     "react-moment": "^1.1.1",
     "react-qrcode-logo": "^2.8.0",
-    
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+
+    "react-scripts": "4.0.3",
+    "react-window": "^1.8.6",
+    "reinspect": "^1.1.0",
+    "swagger-ui-react": "^4.1.0",
+    "typescript": "^4.7.4",
+    "uuid": "^9.0.0",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
