--- a/package.json
+++ b/package.json
@@ -46,12 +46,7 @@
     "react-qrcode-logo": "^2.8.0",
 
     "react-scripts": "4.0.3",
-    "react-window": "^1.8.6",
-    "reinspect": "^1.1.0",
-    "swagger-ui-react": "^4.1.0",
-    "typescript": "^4.7.4",
-    "uuid": "^9.0.0",
-    "web-vitals": "^1.0.1"
+    "react-window": "^1.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
