--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "react-moment": "^1.1.1",
     "react-qrcode-logo": "^2.8.0",
 
-    "react-scripts": "4.0.3",
-    "react-window": "^1.8.6"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
