--- a/package.json
+++ b/package.json
@@ -89,6 +89,26 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.8.1"
+    "@sambego/storybook-state": "^2.0.1",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/node-logger": "^6.5.9",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.5.9",
+    "@types/file-saver": "^2.0.2",
+    "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.170",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/node": "^15.12.1",
+    "@types/qrcode.react": "^1.0.2",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-window": "^1.8.3",
+    "@types/swagger-ui-react": "^3.35.3",
+    "file-loader": "^6.2.0",
+    "storybook-react-context": "^0.6.0"
   }
 }
