--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
 
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.15.2",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-admin": "4.8.1",
     "react-bottom-scroll-listener": "^5.0.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
 
     "react-final-form": "^6.5.9",
     "react-icons": "^4.3.1",
@@ -97,8 +97,8 @@
     "@types/node": "^15.12.1",
     "@types/qrcode.react": "^1.0.2",
     "@types/query-string": "^6.3.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-window": "^1.8.3",
     "@types/swagger-ui-react": "^3.35.3",
