--- a/package.json
+++ b/package.json
@@ -12,39 +12,32 @@
     "@mui/lab": "^5.0.0-alpha.122",
     "@mui/material": "^5.11.12",
     "@mui/x-date-pickers": "^6.0.1",
-
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/uuid": "^9.0.0",
     "axios": "^0.21.4",
-
     "date-fns": "^2.29.3",
     "file-saver": "^2.0.5",
     "final-form": "^4.20.9",
     "formik": "^2.2.9",
-
     "iframe-resizer-react": "^1.1.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-
     "mui-rff": "^6.1.4",
-
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.15.2",
-    "react": "18.2.0",
+    "react": "^17.0.2",
     "react-admin": "4.8.1",
     "react-bottom-scroll-listener": "^5.0.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0",
-
+    "react-dom": "^17.0.2",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.3.1",
     "react-lodash": "^0.1.2",
     "react-moment": "^1.1.1",
     "react-qrcode-logo": "^2.8.0",
-
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
