--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "moment-timezone": "^0.5.33",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.15.2",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-admin": "4.8.1",
     "react-bottom-scroll-listener": "^5.0.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.3.1",
     "react-lodash": "^0.1.2",
@@ -63,8 +63,12 @@
           "**/*.stories.*"
         ],
         "rules": {
-          "import/no-anonymous-default-export": "off"
+          "import/no-anonymous-default-export": "off",
+          "@storybook/react": {
+            "react-element-to-jsx-string": "15.0.0"
+          }
         }
+       
       }
     ]
   },
@@ -82,6 +86,12 @@
   },
   "devDependencies": {
     "@sambego/storybook-state": "^2.0.1",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/node-logger": "^6.5.9",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.5.9",
     "@types/file-saver": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
@@ -89,8 +99,8 @@
     "@types/node": "^15.12.1",
     "@types/qrcode.react": "^1.0.2",
     "@types/query-string": "^6.3.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-window": "^1.8.3",
     "@types/swagger-ui-react": "^3.35.3",
